--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -32,10 +32,11 @@
     cursor: pointer;
     background: var(--gradient);
     color: white;
-    padding: 7px;
+    padding: 5px;
     padding-left: 30px;
     border-radius: 100px 10px 10px 10px;
     margin-top: 5px;
+    margin-bottom: 5px;
     font-weight: 800;
   }
   .menuItems {
